Markup homework tests refactored